Fix alignment of status text in citizens view

--- a/source/stonehearth_data/mods/stonehearth/ui/game/citizens/citizens.less
+++ b/source/stonehearth_data/mods/stonehearth/ui/game/citizens/citizens.less
@@ -33,8 +33,10 @@
       }
 
       td:nth-child(2) {
+         .nobr;
          padding-top: 11px;
          width: 100%;
+         text-align: right;
 
          a {
             color: #93ef26;
@@ -78,9 +80,7 @@
          left: 0px;
       }
 
-      .moveCameraButton__ {
-         .control;
-         content: url(images/move_camera.png);
+      .moveCameraButton {
       }
 
       .toolbar {
